feat(map): add SVG floor plan, POIs 1–11, user position indicator, and Figma-style POI bottom sheet; feat: integrate expo-location and iOS permissions; chore: routing + screens (FirstThursdays, ThankYou)

--- a/app.json
+++ b/app.json
@@ -9,7 +9,11 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "We use your location to show your position inside the cathedral and highlight nearby points of interest.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "We use your location to show your position inside the cathedral and highlight nearby points of interest."
+      }
     },
     "android": {
       "adaptiveIcon": {
