--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/ST_GEORGES_CATHEDRAL_LOGO.png"
     },
     "plugins": [
       "expo-router",
