--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,5 @@
 name: CI 
 
-
 # Workflow trigger
 on:
   push:
@@ -9,31 +8,33 @@ on:
   pull_request:
     branches:
       - main
-    workflow_dispatch:
+  workflow_dispatch:
 
+# What tasks to run
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-#what tasks to run
-        jobs:
-            build:
-            runs-on: ubuntu-latest
+    # Get code from repository
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-            #get code from repository
-                 steps:
-                     - name: Checkout repository
-                     uses: actions/checkout@v2
+      # Set up Node.js environment
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
-                     #set up Node.js environment
-                     - name: Set up Node.js
-                     uses: actions/setup-node@v2
-                     with:
-                         node-version: '14'
-                         cache: 'npm'
-                  #install dependencies
-                    - name: Install dependencies
-                      run: npm ci #clean install
+      # Install dependencies
+      - name: Install dependencies
+        run: npm ci
 
-                      - name: Linter
-                    run: npm run lint
-                    #run tests
-                    - name: Run tests
-                      run: npm test
+      # Run linter
+      - name: Linter
+        run: npm run lint
+
+      # Run tests
+      - name: Run tests
+        run: npm test
