CI will run on everyones workflow when pushing and on pull from main branch

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,9 +5,14 @@ on:
   push:
     branches:
       - main
+      - Kevin_code
+      - James
+      - Weylin_code
+      - emil_code
   pull_request:
     branches:
       - main
+      
   workflow_dispatch:
 
 # What tasks to run
