--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,12 @@
 {
+  "firestore":{
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
+  },
+  
   "functions": [
     {
       "source": "functions",
