--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web",
     "lint": "expo lint",
     "predeploy": "expo export -p web",
-  "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
+    "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -33,6 +33,7 @@
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.3.0",
+    "firestore": "^1.1.6",
     "lucide-react": "^0.544.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
