remove dead code and unused files

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "web": "expo start --web",
     "lint": "expo lint",
     "predeploy": "expo export -p web",
-  "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
+    "deploy-hosting": "npm run predeploy && firebase deploy --only hosting",
+    "knip": "knip"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -47,9 +48,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/node": "^24.9.1",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "knip": "^5.66.2",
     "react-native-dotenv": "^3.4.11",
     "typescript": "~5.8.3"
   },
