Changed the syntax to use JSX to handle special characters(UI and where there is Text displaying with apostrophe or symbols). Ran Snyk, npm audit, and eslint test for reports. New app.config.js file instead of app.json, this is so I can add headers for security(prevents attacks for the types in headers added)

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,17 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
+
+# reports for security tests
+reports/
+*.report.json
+*.report.html
+npm-audit*.json
+snyk-report*.json
+snyk-report*.html
+eslint-security-report*.json
+eslint-report*.json
+
 app-example
 .env
 TourGuideApp.code-workspace
