--- a/app.json
+++ b/app.json
@@ -25,7 +25,16 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/ST_GEORGES_CATHEDRAL_LOGO.png"
+      "favicon": "./assets/images/ST_GEORGES_CATHEDRAL_LOGO.png",
+      "headers":{
+"X-Frame-Options": "DENY",
+        "X-Content-Type-Options": "nosniff",
+        "Referrer-Policy": "strict-origin-when-cross-origin",
+        "Permissions-Policy": "geolocation=(self), microphone=(), camera=()",
+        "Content-Security-Policy": "default-src 'self';script-src 'self' 'unsafe-inline' https://*.firebaseio.com https://*.googleapis.com https://www.gstatic.com;style-src 'self' 'unsafe-inline';img-src 'self' 'unsafe-inline' data: https://firebasestorage.googleapis.com;font-src 'self' data:;connect-src 'self' https://*.firebaseio.com https://*.googleapis.com https://firestore.googleapis.com https://firebasestorage.googleapis.com wss://*.firebaseio.com;object-src 'none';form-action 'self';base-uri 'self';"
+       
+      }
+
     },
     "plugins": [
       "expo-router",
