--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.6.0",
     "lucide-react": "^0.544.0",
+    "nodemailer": "^7.0.10",
+    "pdfkit": "^0.17.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -52,11 +56,11 @@
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.38.0",
     "eslint-config-expo": "~9.2.0",
-    "knip": "^5.66.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-security": "^3.0.1",
+    "knip": "^5.66.2",
     "react-native-dotenv": "^3.4.11",
     "typescript": "~5.8.3"
   },
